[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/blocks_tileset.tres" type="TileSet" id=1]
[ext_resource path="res://scenes/current_shape/current_shape.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/grid/grid01.png" type="Texture" id=3]
[ext_resource path="res://scenes/main/main.gd" type="Script" id=4]

[sub_resource type="TileSet" id=1]
0/name = "grid01.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "grid01.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 128, 0, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "grid01.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 256, 0, 128, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "grid01.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 384, 0, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "grid01.png 4"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 512, 0, 128, 128 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Field" type="Control" parent="VBoxContainer"]
margin_right = 360.0
margin_bottom = 358.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FieldTileMap" type="TileMap" parent="VBoxContainer/Field"]
unique_name_in_owner = true
scale = Vector2( 0.32, 0.32 )
tile_set = SubResource( 1 )
cell_size = Vector2( 128, 128 )
format = 1

[node name="PreviewTileMap" type="TileMap" parent="VBoxContainer/Field"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0.466667 )
scale = Vector2( 0.32, 0.32 )
tile_set = SubResource( 1 )
cell_size = Vector2( 128, 128 )
format = 1

[node name="ShapesSource" type="Control" parent="VBoxContainer"]
margin_top = 362.0
margin_right = 360.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CurrentShape" parent="VBoxContainer/ShapesSource" instance=ExtResource( 2 )]

[node name="Shapes" type="Node" parent="."]

[node name="I" type="TileMap" parent="Shapes"]
visible = false
tile_set = ExtResource( 1 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0 )

[node name="O" type="TileMap" parent="Shapes"]
visible = false
tile_set = ExtResource( 1 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, 65535, 0, 0, 0, 0, 0 )

[node name="T" type="TileMap" parent="Shapes"]
visible = false
tile_set = ExtResource( 1 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, 0, 0, 0 )

[node name="S" type="TileMap" parent="Shapes"]
visible = false
tile_set = ExtResource( 1 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( -65536, 0, 0, -65535, 0, 0, 65535, 0, 0, 0, 0, 0 )

[node name="Z" type="TileMap" parent="Shapes"]
visible = false
tile_set = ExtResource( 1 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, 0, 0, 0, 1, 0, 0 )

[node name="J" type="TileMap" parent="Shapes"]
visible = false
tile_set = ExtResource( 1 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, 1, 0, 0 )

[node name="L" type="TileMap" parent="Shapes"]
visible = false
tile_set = ExtResource( 1 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( -65535, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0 )

[connection signal="drag" from="VBoxContainer/ShapesSource/CurrentShape" to="." method="_on_CurrentShape_drag"]
